--- a/BSBuilder/src/bsbuilder/resources/web/js/angular/angular_list_html-template.html
+++ b/BSBuilder/src/bsbuilder/resources/web/js/angular/angular_list_html-template.html
@@ -2,6 +2,14 @@
 <div>
 Testing
 	<table class="table table-hover">
+		<thead>
+		<tr>
+		<th>Select</th>
+		#foreach($key in $attrs.keySet() )
+		<th>$key</th>
+		#end
+		</tr>
+		</thead>
 		<tbody>
 			<tr dir-paginate="${domainObjectName} in ${domainClassName}s | itemsPerPage: pageSize" total-items="totalRows" current-page="pagination.current">	
 				<td>		
