--- a/BSBuilder/src/bsbuilder/resources/web/js/vue/root/index.html
+++ b/BSBuilder/src/bsbuilder/resources/web/js/vue/root/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>fleet</title>
+	
+	<!-- minified jquery -->
+	<script src="static/jquery.js"></script>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
